Fixing findbugs isses.